[package]
name = "tower-http-digest"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.13.0"
bytes = "1.1.0"
crc32fast = "1.3.2"
digest = "0.10.3"
http = "0.2.6"
http-body = "0.4.4"
sha2 = "0.10.2"
thiserror = "1.0.30"
tower = { version = "0.4.12", features = ["buffer"] }

# Deprecated digests
adler32 = { version = "1.2.0", optional = true }
md-5 = { version = "0.10.1", optional = true }
sha1 = { version = "0.10.1", optional = true }

[features]
default = []
deprecated = ["adler32", "md-5", "sha1"]
